--- a/lecture1/lecture1.Rmd
+++ b/lecture1/lecture1.Rmd
@@ -2,7 +2,7 @@
 title: "Lecture 1: Introduction"
 subtitle: <html><div style='float:left'></div><hr color='#EB811B' size=1px width=796px></html>
 author: '&#x130;lhan G&#252;ner | University of Kent' 
-date: "EC566: `r Sys.Date()`"
+date: "EC566 | Macroeconomics for Business "
 output:
   xaringan::moon_reader:
     css: [default, rladies, metropolis-fonts] 
@@ -111,13 +111,56 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 - Prepare for seminars – Use them to test your understanding of the lecture
 
 ---
+### Measuring income and living standards
 
-<img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="100%"/>
+- Gross Domestic Product (GDP) = A measure of total income and output of the economy in a given period.
+Usually expressed in per-capita terms (as an average income).
+
+- GDP per capita ≠ Disposable income
+
+- Disposable income = Total income – taxes + government transfers
+
+- Both are imperfect measures of well-being
+
 
 ---
+## GDP per capita over time
 
-<img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="100%"/>
+<center>
+<img src="./lecture1_files/figure-html/gdp_per_capita_time.svg" width="80%"/>
+</center>
+---
 
+## Timing of growth
+
+- Growth take-off occurred at different points in time for different countries:
+ - Britain was the first country to experience sustained economic growth. It began around 1650.
+ - In Japan, it occurred around 1870.
+ - The kink for China and India happened in the second half of the 20th century. 
+
+- In some economies, substantial improvements in people’s living standards did not occur until they gained independence from colonial rule or interference by European nations.
+
+
+---
+## Britain: first to sustained economic growth
+
+<center>
+<img src="./lecture1_files/figure-html/gdp_per_capita_1650_1850.svg" width="70%"/>
+</center>
+
+---
+## Sustained growth in Japan occurred around 1870
+
+<center>
+<img src="./lecture1_files/figure-html/gdp_per_capita_time_recent.svg" width="70%"/>
+</center>
+
+---
+## The kink for China and India happened in the second half of the 20th century
+
+<center>
+<img src="./lecture1_files/figure-html/gdp_per_capita_india_china_focus.svg" width="70%"/>
+</center>
 
 ---
 
@@ -129,6 +172,7 @@ https://www.kent.ac.uk/learning/resources/studyguides/planningandwritingessays.p
 .pull-right[
 <img src="./lecture1_files/figure-html/Global-inequality-in-1800-1975-and-2015.png" width="70%"/>
 ]
+
 
 ---
 
