--- a/lecture1/visuals/lecture1.ipynb
+++ b/lecture1/visuals/lecture1.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,21 +831,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['Decade'] = df.index.year - df.index.year % 10\n",
-    "df_A['Decade'] = df_A.index.year - df_A.index.year % 10"
+    "df_A['Decade'] = df_A.index.year - df_A.index.year % 10\n",
+    "df_A['Decade'] = df_A.Decade.map(lambda x: f'{x}s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_A['Inflation Rate']=df_A['CPIAUCSL'].pct_change()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_A.rename(columns={'UNRATE':'Unemployment Rate'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors_dict = dict(zip(df_A.Decade.unique(),colors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decades = df_A.Decade.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1960s', '1970s', '1980s', '1990s', '2000s', '2010s'], dtype=object)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i,decade in enumerate(decades):\n",
+    "    select = df_A.Decade.map(lambda x: x in decades[:i+1])\n",
+    "    sns.lmplot(x='Unemployment Rate',y='Inflation Rate',hue='Decade',height=8,aspect=1,\n",
+    "           truncate=True,palette=colors_dict,ci=None,data=df_A[select])\n",
+    "    sns.despine(left='off',bottom='off')\n",
+    "    plt.ylim(ymin=-0.02,ymax=.13)\n",
+    "    plt.xlim(xmin=3,xmax=11)\n",
+    "    plt.text(3,-.04,'Source: Consumer price index for all urban consumers (BLS) and own calculations',fontsize=14)\n",
+    "    plt.text(3,-.045,'Unemployment Rate (BLS)',fontsize=14)\n",
+    "    plt.savefig(f'./philips_curve_{decade}.svg',bbox_inches='tight')\n",
+    "    plt.close()"
    ]
   },
   {
@@ -1032,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
